--- a/archive/archive_app/templates/questions-form.html
+++ b/archive/archive_app/templates/questions-form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <mets name="viewport"
+    <meta name="viewport"
           content="width=device-width, user-scalab=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
      <meta http-equiv="X-UA-Compatible" content="ie=edge">
      <title>Document</title>
@@ -13,7 +13,7 @@
     <form method="POST">
         {% csrf_token %}
         {{ form }}
-        <button typr="submit">Save</button>
+        <button type="submit">Save</button>
     </form>
 
     {% if question %}
