User Validation added!

--- a/archive/archive_app/templates/login.html
+++ b/archive/archive_app/templates/login.html
@@ -24,5 +24,6 @@
      </table>
      <button type="submit">Confirm</button>
  </form>
+<a href="{% url 'user_register' %}">Register Here!</a>
 </body>
 </html>
