--- a/archive/archive_app/templates/questions-form.html
+++ b/archive/archive_app/templates/questions-form.html
@@ -1,23 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalab=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-     <title>Document</title>
-</head>
-<body>
-    <h1>New/Update Question</h1>
+{% extends 'base.html' %}
 
-    <form method="POST">
+{% block Title %}
+Add Question
+{% endblock Title %}
+
+{% block content %}
+<h1>New/Update Question</h1>
+
+    <form method="POST" novalidate>
         {% csrf_token %}
-        {{ form }}
+        {% include 'includes/bs4_form.html' with form=form %}
         <button type="submit">Save</button>
     </form>
 
     {% if question %}
         <a href="{% url 'delete_question' question.id %}">Delete</a>
     {% endif %}
-</body>
-</html>
+{% endblock content %}
+    
